vampire club now has correct width and scrollbar color

--- a/client/style.css
+++ b/client/style.css
@@ -172,9 +172,9 @@ main {
   color: antiquewhite;
   font-family: 'Poiret One';
   background-color: rgb(0, 0, 0);
-  max-width: 1200px;
+  max-width: 875px;
   margin: auto;
-  width: 50%;
+  width: 100%;
   border: 3px solid #2B2119;
   padding: 10px;
 }
@@ -232,7 +232,7 @@ main {
 }
 
 .vamrow_images>img {
-  width: 100%;
+  width: 90%;
   max-height: 500px;
   justify-self: right;
 }
@@ -245,4 +245,20 @@ main {
 
 .vamcalendarInfo {
   background-color: rgb(0, 0, 0);
+}
+
+.vamrow_text::-webkit-scrollbar {
+  width: 10px;
+}
+
+.vamrow_text::-webkit-scrollbar-track {
+  background: #000000;
+}
+
+.vamrow_text::-webkit-scrollbar-thumb {
+  background: darkred;
+}
+
+.vamrow_text::-webkit-scrollbar-thumb:hover {
+  background: red;
 }
